--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/sagarvasa/Node-Socket.io#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.18",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
