--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.18",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
