--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
   },
   "homepage": "https://github.com/sagarvasa/Node-Socket.io#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.9.18",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "shortid": "^2.2.15",
-    "socket.io": "^2.3.0",
-    "winston": "^3.2.1"
+    "body-parser": "1.19.0",
+    "connect-flash": "0.1.1",
+    "cookie-parser": "1.4.5",
+    "ejs": "3.1.3",
+    "express": "4.17.1",
+    "express-session": "1.17.1",
+    "lodash": "4.17.19",
+    "mongoose": "5.9.18",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
+    "shortid": "2.2.15",
+    "socket.io": "2.3.0",
+    "winston": "3.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "2.0.4"
   }
 }
